fix z-index issue

--- a/src/components/Console/index.scss
+++ b/src/components/Console/index.scss
@@ -145,7 +145,6 @@
       border: .09vh solid rgba(255, 255, 255, 0.08);
       backdrop-filter: blur(.25vh);
       pointer-events: none;
-      z-index: 1;
 
       span {
         font-size: .68vh;
